feat: add view project role boilerplate and fix user session missing in routes
