# app/routes/object.py
@@ -5,6 +5,7 @@ from ..config import VERSION, log
 from ..database import Database
 from ..models import Project, Object, ObjectStatus
 from .api import project_list, object_get
+from .project import get_user_role_in_project
 
 object_blueprint = Blueprint('object', __name__)
 
@@ -12,29 +13,28 @@ object_blueprint = Blueprint('object', __name__)
 def view_object(project_id: str, object_id: str):
     """ View and handle the object of a specific project """
     output = ()
-    project = None
-    obj = None
+    project:Project = None
+    obj:Object = None
     can_edit = False
     can_comment = False
 
-    # Fetch project details
     res, status = project_list()
     if status == 200:
         project = next((Project.from_dict(elem) for elem in res["projects"] if elem["id"] == int(project_id)), None)
         
-    # Fetch object details
     res, status = object_get(object_id, load_raw=False)
     if status == 200:
         obj = Object.from_dict(res["object"])
         log.debug("view_object - object details: ", obj)
-        can_edit = True #FIXME: obj.can_edit(session.get("user_id"))
-        can_comment = True #FIXME: obj.can_comment(session.get("user_id"))
+        can_edit = True
+        can_comment = True
     else:
         output = ("error", res["error"])
 
     return render_template(
         "project/object/view.html",
-        title="Document",
+        title="Document Review",
+        user=session["user"],
         object=obj,
         project=project,
         output=output,
@@ -42,7 +42,8 @@ def view_object(project_id: str, object_id: str):
         logged=is_logged(),
         admin=is_logged_admin(),
         can_edit=can_edit,
-        can_comment=can_comment
+        can_comment=can_comment,
+        project_role=get_user_role_in_project(project_id),
     )
 
 @object_blueprint.route('/projects/<project_id>/objects/<object_id>/file', methods=["GET"])
